# couveflow

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose-dev.yml  makefile  manage.py  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml
couveflow/: asgi.py  settings.py  urls.py  wsgi.py
couveflow/core/: admin.py  apps.py  constants.py  models.py  urls.py
couveflow/core/guidelines/: evaluator.py  exceptions.py  functions.py  language.md  lexer.py  reducers.py  structures.py
couveflow/core/migrations/: 0001_initial.py  0002_action_params.py  0003_alter_action_device_sensor_measure_sensor.py  0004_remove_measure_device_remove_measure_source_label_and_more.py
couveflow/core/serializers/: __init__.py  action.py  ask_action.py  device.py  device_register.py  exceptions.py  measure.py  sensor.py
couveflow/core/tests/: factories.py  test_serializers.py
couveflow/core/tests/guidelines/: test_evaluator.py  test_functions.py  test_lexer.py  test_reducers.py
couveflow/core/tests/views/: conftest.py  test_ask_action.py  test_device_register.py  test_measure.py  test_utils.py
couveflow/core/views/: __init__.py  ask_action.py  device_register.py  measure.py  mixins.py  permissions.py  utils.py
couveflow/graphql/: schema.py
couveflow/graphql/tests/: test_schema.py
couveflow/tests/: factories.py
scripts/: entrypoint.sh
